login/keycloak/30-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: login
  labels:
    app: keycloak
spec:
  serviceName: keycloak
  replicas: 2
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: jboss/keycloak:9.0.0
          ports:
            - name: http
              containerPort: 8080
#          readinessProbe:
#            httpGet:
#              port: http
#              path: /realms/master
#          livenessProbe:
#            httpGet:
#              port: http
#              path: /
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: keycloak
      securityContext:
        runAsNonRoot: true
