login/keycloak/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: login
  labels:
    app: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 8080
      targetPort: http
