login/keycloak/20-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak
  namespace: login
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - sso.krsdev.app
      port:
        name: http
        protocol: HTTP
        number: 80
