login/keycloak/20-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
  namespace: login
spec:
  hosts:
    - sso.krsdev.app
  gateways:
    - keycloak
  http:
    - route:
        - destination:
            host: keycloak
